# prog

cp_folder/: cp_folder.py  readme.txt
get_info_proj/: get_info_proj.py  readme.txt
module_process_info/: readme.txt
module_process_info/process_info_app/: CMakeLists.txt  process_info_app.c
module_process_info/process_info_module/: Makefile  process_info.c
