# CMakeLists.txt для сборки консольного приложения process_info_app
#
# Этот файл определяет правила сборки для приложения process_info_app
# с использованием системы сборки CMake, как указано в требованиях задачи.

# Минимальная требуемая версия CMake
# Версия 3.10 выбрана как базовая, поддерживаемая в Ubuntu 22.04
cmake_minimum_required(VERSION 3.10)

# Имя проекта и язык программирования
# Указываем, что проект называется process_info_app и написан на языке C
project(process_info_app C)

# Устанавливаем стандарт языка C
# C11 - современный стандарт C, обеспечивающий совместимость и доступ к новым функциям
set(CMAKE_C_STANDARD 11)

# Определяем исполняемый файл, который будет создан
# Первый аргумент - имя исполняемого файла
# Второй аргумент - исходный файл, из которого будет скомпилирован исполняемый файл
add_executable(process_info_app process_info_app.c)